--- a/DailyDiary/MainWindow.xaml
+++ b/DailyDiary/MainWindow.xaml
@@ -1,12 +1,50 @@
-﻿<Window x:Class="DailyDiary.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DailyDiary"
+        xmlns:Forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms" x:Class="DailyDiary.MainWindow"
+		WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="570.314" Width="918.771">
+	<Grid x:Name="g_MainGrid">
+		<Rectangle x:Name="ss_Status" Height="28" VerticalAlignment="Bottom" Fill="#FFE2E2E2" Stroke="LightBlue" Margin="-7,0,-8,-8" />
+		<Label x:Name="lbl_LoggedInAs" Content="Logged in as: " FontSize="12" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="486" Margin="0,0,0,-6" />
+		<ListView x:Name="c_DatePicker" HorizontalAlignment="Left" Width="230" Background="#FFC9C6C6" Margin="0,48,0,20" Cursor="Hand">
+
+			<!-- Generate days here -->
+		</ListView>
+		<ComboBox x:Name="cb_Months" HorizontalAlignment="Left" Margin="93,24,0,0" VerticalAlignment="Top" Width="137" Height="24" FontSize="14" SelectionChanged="cb_Months_SelectionChanged">
+			<ComboBoxItem Content="January"/>
+			<ComboBoxItem Content="February"/>
+			<ComboBoxItem Content="March"/>
+			<ComboBoxItem Content="April"/>
+			<ComboBoxItem Content="May"/>
+			<ComboBoxItem Content="June"/>
+			<ComboBoxItem Content="July"/>
+			<ComboBoxItem Content="August"/>
+			<ComboBoxItem Content="September"/>
+			<ComboBoxItem Content="October"/>
+			<ComboBoxItem Content="November"/>
+			<ComboBoxItem Content="December"/>
+		</ComboBox>
+		<ComboBox x:Name="cb_Years" HorizontalAlignment="Left" VerticalAlignment="Top" Width="93" Height="24" FontSize="18" VerticalContentAlignment="Top" Padding="0,0,0,2" HorizontalContentAlignment="Center" Margin="0,24,0,0" IsEditable="True" KeyUp="cb_Years_KeyUp" SelectionChanged="cb_Years_SelectionChanged"/>
+		<Grid x:Name="mb_Menu" Height="24" VerticalAlignment="Top" Background="#FFEAEAEA">
+			<Button x:Name="btn_ShowHidePanel" Width="24" FontSize="22" HorizontalAlignment="Left" VerticalContentAlignment="Top" Padding="0,-5,0,0" ToolTip="Open / Close the date selector panel" Click="btn_ShowHidePanel_Click">←</Button>
+			<Label x:Name="lbl_CurrentDate" Content="" HorizontalAlignment="Right" Margin="0,-11,0,-1" VerticalAlignment="Top" FontSize="22"/>
+			<Button x:Name="btn_Settings" Content="Settings" HorizontalAlignment="Left" Margin="36,0,0,0" VerticalAlignment="Top" Width="76" Height="24" Click="btn_Settings_Click"/>
+		</Grid>
+		<DatePicker x:Name="dp_Date" Visibility="Hidden" HorizontalAlignment="Left" Margin="0,24,0,0" VerticalAlignment="Top" Width="32" SelectedDateChanged="dp_Date_SelectedDateChanged" CalendarOpened="dp_Date_CalendarOpened"/>
+		<TextBox x:Name="tb_Title" Height="28" Margin="237,29,8,0"	BorderThickness="1" BorderBrush="Black" CaretBrush="Red"			TextWrapping="Wrap" Text="" FontSize="19" VerticalAlignment="Top" TextChanged="tb_Title_TextChanged"/>
+		<TextBox x:Name="tb_Data" AcceptsReturn="True" AcceptsTab="True" BorderThickness="1" BorderBrush="Black" CaretBrush="Red" Margin="237,62,46,57" TextWrapping="Wrap" FontSize="16" Text="" TextChanged="tb_Data_TextChanged"/>
+		<Button x:Name="btn_Clear" Content="Clear" FontSize="20" Padding="0,-3,0,0" HorizontalAlignment="Left" Margin="237,0,0,25" Width="125" Height="27" VerticalAlignment="Bottom"/>
+		<Button x:Name="btn_Save" Content="Save" FontSize="20" Padding="0,-3,0,0" Margin="0,0,46,25" HorizontalAlignment="Right" Width="125" Height="27" VerticalAlignment="Bottom" Click="btn_Save_Click"/>
+		<Image x:Name="i_Save" Margin="0,0,176,25" IsEnabled="False" HorizontalAlignment="Right" Width="27" Height="27" VerticalAlignment="Bottom" RenderSize="27,27"/>
+		<Image x:Name="btn_NightMode" Cursor="Hand"  Margin="0,62,8,0" VerticalAlignment="Top" Height="33" HorizontalAlignment="Right" Width="33" RenderSize="33,33" MouseUp="btn_NightMode_MouseUp">
+		</Image>
+		<Label x:Name="lbl_LastUpdated" Content="" FontSize="12" Height="30" VerticalAlignment="Bottom" Margin="0,0,0,-6" HorizontalAlignment="Right" Width="157" />
+
+
+	</Grid>
 </Window>
