--- a/DailyDiary/NewUserWindow.xaml
+++ b/DailyDiary/NewUserWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DailyDiary.NewUserWindow"
+﻿<Window x:Name="w_NewUser" x:Class="DailyDiary.NewUserWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,18 +10,12 @@
 		<Label Content="Username: " HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top"/>
 		<Label Content="Password: " HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
 		<Label Content="Email: " HorizontalAlignment="Left" Margin="10,56,0,0" VerticalAlignment="Top"/>
-		<TextBox x:Name="tb_UserName" HorizontalAlignment="Left" Height="23" Margin="84,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="211"/>
-		<TextBox x:Name="tb_Email" HorizontalAlignment="Left" Height="23" Margin="84,59,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="211" Background="White"/>
-		<PasswordBox x:Name="tb_Password" HorizontalAlignment="Left" Margin="84,33,0,0" VerticalAlignment="Top" Width="211" Height="23" PasswordChar="*" />
-		<Button x:Name="btn_Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="10,108,0,0" VerticalAlignment="Top" Width="75"/>
-		<Button x:Name="btn_CreateUser" Content="Create user" HorizontalAlignment="Left" Margin="220,108,0,0" VerticalAlignment="Top" Width="75" Click="btn_CreateUser_Click"/>
+		<TextBox x:Name="tb_UserName"  HorizontalAlignment="Left" Height="23" Margin="84,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="211" TabIndex="0"/>
+		<TextBox x:Name="tb_Email" HorizontalAlignment="Left" Height="23" Margin="84,59,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="211" Background="White" TabIndex="2"/>
+		<PasswordBox x:Name="tb_Password" HorizontalAlignment="Left" Margin="84,33,0,0" VerticalAlignment="Top" Width="211" Height="23" PasswordChar="*" TabIndex="1" />
+		<Button x:Name="btn_Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="10,108,0,0" VerticalAlignment="Top" Width="75" TabIndex="3"/>
+		<Button x:Name="btn_CreateUser" Content="Create user" HorizontalAlignment="Left" Margin="220,108,0,0" VerticalAlignment="Top" Width="75" Click="btn_CreateUser_Click" TabIndex="4"/>
 		<Label x:Name="lbl_Info" Content="" HorizontalAlignment="Left" Margin="10,82,0,0" VerticalAlignment="Top"/>
-		
-		<!-- A User with that name already exists -->
-		<!-- Username must not be empty -->
-		<!-- Password must not be empty -->
-		<!-- Email must not be empty -->
-		<!-- Not valid Email -->
 
 	</Grid>
 </Window>
