--- a/DailyDiary/PasswordChangeWindow.xaml
+++ b/DailyDiary/PasswordChangeWindow.xaml
@@ -5,8 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DailyDiary"
         mc:Ignorable="d"
-        Title="PasswordChangeWindow" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
+		ResizeMode="NoResize"
+		WindowStyle="ToolWindow"
+		WindowStartupLocation="CenterScreen"
+        Title="PasswordChangeWindow" Height="164.232" Width="442.329">
+	<Grid>
+		<Label Content="Username: " HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+		<Label Content="Old Password: " HorizontalAlignment="Left" Margin="10,36,0,0" VerticalAlignment="Top"/>
+		<Label Content="New Password: " HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top"/>
+		<TextBox x:Name="tb_Name" Margin="110,14,57,0" Height="18" VerticalAlignment="Top"/>
+		<PasswordBox x:Name="pb_OldPass" Margin="110,40,57,0" Height="18" VerticalAlignment="Top"/>
+		<TextBox x:Name="tb_OldPass" Margin="110,40,57,0" Height="18" VerticalAlignment="Top" Visibility="Hidden" />
+		<PasswordBox x:Name="pb_NewPass" Margin="110,66,57,0" Height="18" VerticalAlignment="Top"/>
+		<TextBox x:Name="tb_NewPass" Margin="110,66,57,0" Height="18"  VerticalAlignment="Top" Visibility="Hidden"/>
+		<Button x:Name="btn_OldPassShow"	Content="Show" Height="18" HorizontalAlignment="Right" Margin="0,40,10,0" VerticalAlignment="Top" Width="47" PreviewMouseDown="btn_OldPassShow_PreviewMouseDown" PreviewMouseUp="btn_OldPassShow_PreviewMouseUp" />
+		<Button x:Name="btn_NewPassShow"	Content="Show" Height="18" HorizontalAlignment="Right" Margin="0,66,10,0" VerticalAlignment="Top" Width="47" PreviewMouseDown="btn_NewPassShow_PreviewMouseDown" PreviewMouseUp="btn_NewPassShow_PreviewMouseUp" />
+		<Button x:Name="btn_Cancel"			Content="Cancel" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="75" Click="btn_Cancel_Click"/>
+		<Button x:Name="btn_ChangePass"		Content="Change Password" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="113" Click="btn_ChangePass_Click"/>
+
+	</Grid>
 </Window>
