started work on user based settings

--- a/DailyDiary/PasswordReminderWindow.xaml
+++ b/DailyDiary/PasswordReminderWindow.xaml
@@ -5,21 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DailyDiary"
         mc:Ignorable="d"
-        Title="Password Reminder" Height="278.693" Width="442.789" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Password Reminder" Height="278.693" Width="442.789" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" PreviewKeyDown="F_PasswordReminder_PreviewKeyDown">
 	<Grid Margin="0,0,2,0">
-		<TextBox	x:Name="tb_Name"		Text=""									Margin="96,16,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="307"	/>
-		<TextBox	x:Name="tb_Email"		Text=""									Margin="96,40,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="307"	/>
-		<TextBox	x:Name="tb_ID"			Text=""									Margin="96,104,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="244"	/>
-		<TextBox	x:Name="tb_Password"	Text=""									Margin="96,167,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="244"	/>
+		<TextBox	x:Name="tb_Name"		Text=""									Margin="96,16,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="307" TabIndex="0" PreviewKeyDown="Tb_Name_PreviewKeyDown"	/>
+		<TextBox	x:Name="tb_Email"		Text=""									Margin="96,40,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="307" TabIndex="1" PreviewKeyDown="Tb_Email_PreviewKeyDown"	/>
+		<TextBox	x:Name="tb_ID"			Text=""									Margin="96,122,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="244" TabIndex="3"	/>
+		<TextBox	x:Name="tb_Password"	Text=""									Margin="96,185,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="244" TabIndex="6"	/>
 		<Label		x:Name="lbl_Name"		Content="Username: "					Margin="10,12,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"					/>
 		<Label		x:Name="lbl_Email"		Content="Email: "						Margin="10,36,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"					/>
-		<Label		x:Name="lbl_ID"			Content="Reminder ID: "					Margin="10,100,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"					/>
-		<Label		x:Name="lbl_Password"	Content="Password: "					Margin="10,163,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"					/>
-		<Button		x:Name="btn_SendMail"	Content="Send Reminder ID to my Email"	Margin="10,67,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="393" Click="btn_SendMail_Click"	/>
-		<Button		x:Name="btn_ShowPass"	Content="Show me my Password"			Margin="10,131,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="393" Click="btn_ShowPass_Click"	/>
-		<Button		x:Name="btn_Close"		Content="Close"							Margin="17,209,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="75" Click="btn_Close_Click"/>
-		<Button		x:Name="btn_Paste"		Content="Paste"							Margin="345,104,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left" 		Width="58" Height="18"	Padding="0,0,0,1" Click="btn_Paste_Click"/>
-		<Button		x:Name="btn_Copy"		Content="Copy"							Margin="345,167,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="58" Height="18"	Padding="0,0,0,1" Click="btn_Copy_Click"/>
+		<Label		x:Name="lbl_ID"			Content="Reminder ID: "					Margin="10,118,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"					/>
+		<Label		x:Name="lbl_Password"	Content="Password: "					Margin="10,181,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"					/>
+		<Button		x:Name="btn_SendMail"	Content="Send Reminder ID to my Email"	Margin="10,67,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="393" Click="btn_SendMail_Click" TabIndex="2"	/>
+		<Button		x:Name="btn_ShowPass"	Content="Show me my Password"			Margin="10,149,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="393" Click="btn_ShowPass_Click" TabIndex="5"	/>
+		<Button		x:Name="btn_Close"		Content="Close"							Margin="17,220,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="75" Click="btn_Close_Click" TabIndex="8"/>
+		<Button		x:Name="btn_Paste"		Content="Paste"							Margin="345,122,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left" 		Width="58" Height="18"	Padding="0,0,0,1" Click="btn_Paste_Click" TabIndex="4"/>
+		<Button		x:Name="btn_Copy"		Content="Copy"							Margin="345,185,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="58" Height="18"	Padding="0,0,0,1" Click="btn_Copy_Click" TabIndex="7"/>
+		<Label		x:Name="lbl_RequestID"	Content="Request ID: "					Margin="10,92,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"					/>
+		<Label		x:Name="lbl_RequestVal"	Content=""								Margin="96,92,0,0"		VerticalAlignment="Top"		HorizontalAlignment="Left"					/>
+		<Label		x:Name="lbl_EmailSent"	Content="Email Sent!"					Margin="178,215,0,0"	VerticalAlignment="Top"		HorizontalAlignment="Left"		Width="129" FontWeight="Bold" FontFamily="Courier New" FontSize="18"	Opacity="0"	>
+			<Label.Foreground>
+				<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+					<GradientStop Color="Black" Offset="0"/>
+					<GradientStop Color="Red" Offset="0.3"/>
+					<GradientStop Color="Red" Offset="0.8"/>
+					<GradientStop Color="Black" Offset="1"/>
+				</LinearGradientBrush>
+			</Label.Foreground>
+		</Label>
 
 	</Grid>
 </Window>
