--- a/DailyDiary/MainWindow.xaml
+++ b/DailyDiary/MainWindow.xaml
@@ -11,11 +11,11 @@
 	<Grid x:Name="g_MainGrid">
 		<Rectangle x:Name="ss_Status" Height="28" VerticalAlignment="Bottom" Fill="#FFE2E2E2" Stroke="LightBlue" Margin="-7,0,-8,-8" />
 		<Label x:Name="lbl_LoggedInAs" Content="Logged in as: " FontSize="12" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="486" Margin="0,0,0,-6" />
-		<ListView x:Name="c_DatePicker" HorizontalAlignment="Left" Width="230" Background="#FFC9C6C6" Margin="0,48,0,20" Cursor="Hand">
+		<ListView x:Name="c_DatePicker" HorizontalAlignment="Left" Width="250" Background="#FFC9C6C6" Margin="0,48,0,20" Cursor="Hand" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
 
 			<!-- Generate days here -->
 		</ListView>
-		<ComboBox x:Name="cb_Months" HorizontalAlignment="Left" Margin="93,24,0,0" VerticalAlignment="Top" Width="137" Height="24" FontSize="14" SelectionChanged="cb_Months_SelectionChanged">
+		<ComboBox x:Name="cb_Months" HorizontalAlignment="Left" Margin="136,24,0,0" VerticalAlignment="Top" Width="114" Height="24" FontSize="14" SelectionChanged="cb_Months_SelectionChanged">
 			<ComboBoxItem Content="January"/>
 			<ComboBoxItem Content="February"/>
 			<ComboBoxItem Content="March"/>
@@ -29,21 +29,62 @@
 			<ComboBoxItem Content="November"/>
 			<ComboBoxItem Content="December"/>
 		</ComboBox>
-		<ComboBox x:Name="cb_Years" HorizontalAlignment="Left" VerticalAlignment="Top" Width="93" Height="24" FontSize="18" VerticalContentAlignment="Top" Padding="0,0,0,2" HorizontalContentAlignment="Center" Margin="0,24,0,0" IsEditable="True" KeyUp="cb_Years_KeyUp" SelectionChanged="cb_Years_SelectionChanged"/>
+		<Button Name="btn_year_minus" 	Padding="0,-3,0,0"	HorizontalAlignment="Left" Content="◂" VerticalAlignment="Top"  Width="20" Height="24" Margin="0,24,0,0" FontWeight="Bold" FontFamily="Consolas" FontSize="22" Click="Btn_year_minus_Click"></Button>
+		<Button Name="btn_year_plus"	Padding="0,-3,0,0"	HorizontalAlignment="Left" Content="▸" VerticalAlignment="Top"  Width="20" Height="24" Margin="111,24,0,0" FontWeight="Bold" FontFamily="Consolas" FontSize="22" Click="Btn_year_plus_Click"/>
+		<ComboBox x:Name="cb_Years" HorizontalAlignment="Left" VerticalAlignment="Top" Width="93" Height="24" FontSize="18" VerticalContentAlignment="Top" Padding="0,0,0,2" HorizontalContentAlignment="Center" Margin="19,24,0,0" IsEditable="True" KeyUp="cb_Years_KeyUp" SelectionChanged="cb_Years_SelectionChanged"/>
 		<Grid x:Name="mb_Menu" Height="24" VerticalAlignment="Top" Background="#FFEAEAEA">
-			<Button x:Name="btn_ShowHidePanel" Width="24" FontSize="22" HorizontalAlignment="Left" VerticalContentAlignment="Top" Padding="0,-5,0,0" ToolTip="Open / Close the date selector panel" Click="btn_ShowHidePanel_Click">←</Button>
+			<Button x:Name="btn_ShowHidePanel" Width="24" FontSize="18" HorizontalAlignment="Left" VerticalContentAlignment="Top" Padding="0,-2,0,0" ToolTip="Open / Close the date selector panel" Click="btn_ShowHidePanel_Click" Content="📅"></Button>
 			<Label x:Name="lbl_CurrentDate" Content="" HorizontalAlignment="Right" Margin="0,-11,0,-1" VerticalAlignment="Top" FontSize="22"/>
-			<Button x:Name="btn_Settings" Content="Settings" HorizontalAlignment="Left" Margin="36,0,0,0" VerticalAlignment="Top" Width="76" Height="24" Click="btn_Settings_Click"/>
+			<Button x:Name="btn_Settings" Content="Settings" HorizontalAlignment="Left" Margin="29,0,0,0" VerticalAlignment="Top" Width="76" Height="24" Click="btn_Settings_Click"/>
+			<Separator HorizontalAlignment="Left"  Height="4" Margin="98,10,0,0" VerticalAlignment="Top" Width="24" IsTabStop="False" RenderTransformOrigin="0.5,0.5" >
+				<Separator.RenderTransform>
+					<TransformGroup>
+						<RotateTransform Angle="90"/>
+					</TransformGroup>
+				</Separator.RenderTransform>
+			</Separator>
+			<Button Name="btn_JumpToToday" Content="Today" HorizontalAlignment="Left" Margin="114,0,0,0" VerticalAlignment="Top" Width="74" Height="24"/>
+			<Separator HorizontalAlignment="Left"  Height="4" Margin="180,10,0,0" VerticalAlignment="Top" Width="24" IsTabStop="False" RenderTransformOrigin="0.5,0.5" >
+				<Separator.RenderTransform>
+					<TransformGroup>
+						<RotateTransform Angle="90"/>
+					</TransformGroup>
+				</Separator.RenderTransform>
+			</Separator>
+			<Button Name="btn_ListDaysWithData" FontSize="18" Content="📄"			Padding="0,-1,0,0"	HorizontalAlignment="Left" Margin="195,0,0,0" VerticalAlignment="Top" Width="27" Height="24" Click="Btn_ListDaysWithData_Click"/>
+			<Button Name="btn_Search"			FontSize="18" Content="&#128269;"	Padding="0,-2,0,0"	HorizontalAlignment="Left" Margin="225,0,0,0" VerticalAlignment="Top" Width="27" Height="24" Click="Btn_Search_Click"/>
+			<ComboBox Name="cb_SearchPanel"		HorizontalAlignment="Left" Margin="252,0,0,0" VerticalAlignment="Top" Width="0" Height="24" IsEditable="True" PreviewTextInput="Cb_SearchPanel_PreviewTextInput" KeyUp="Cb_SearchPanel_KeyUp"/>
 		</Grid>
 		<DatePicker x:Name="dp_Date" Visibility="Hidden" HorizontalAlignment="Left" Margin="0,24,0,0" VerticalAlignment="Top" Width="32" SelectedDateChanged="dp_Date_SelectedDateChanged" CalendarOpened="dp_Date_CalendarOpened"/>
-		<TextBox x:Name="tb_Title" Height="28" Margin="237,29,8,0"	BorderThickness="1" BorderBrush="Black" CaretBrush="Red"			TextWrapping="Wrap" Text="" FontSize="19" VerticalAlignment="Top" TextChanged="tb_Title_TextChanged"/>
-		<TextBox x:Name="tb_Data" AcceptsReturn="True" AcceptsTab="True" BorderThickness="1" BorderBrush="Black" CaretBrush="Red" Margin="237,62,46,57" TextWrapping="Wrap" FontSize="16" Text="" TextChanged="tb_Data_TextChanged"/>
-		<Button x:Name="btn_Clear" Content="Clear" FontSize="20" Padding="0,-3,0,0" HorizontalAlignment="Left" Margin="237,0,0,25" Width="125" Height="27" VerticalAlignment="Bottom"/>
+		<TextBox x:Name="tb_Title" Height="28" Margin="297,29,311,0"	BorderThickness="1" BorderBrush="Black" CaretBrush="Red"			TextWrapping="Wrap" Text="" FontSize="19" VerticalAlignment="Top" TextChanged="tb_Title_TextChanged"/>
+		<TextBox x:Name="tb_Data" AcceptsReturn="True" AcceptsTab="True" BorderThickness="1" BorderBrush="Black" CaretBrush="Red" Margin="257,62,10,57" TextWrapping="Wrap" FontSize="16" Text="" TextChanged="tb_Data_TextChanged"/>
+		<Button x:Name="btn_Clear" Content="Clear" FontSize="20" Padding="0,-3,0,0" HorizontalAlignment="Left" Margin="257,0,0,25" Width="125" Height="27" VerticalAlignment="Bottom"/>
 		<Button x:Name="btn_Save" Content="Save" FontSize="20" Padding="0,-3,0,0" Margin="0,0,46,25" HorizontalAlignment="Right" Width="125" Height="27" VerticalAlignment="Bottom" Click="btn_Save_Click"/>
 		<Image x:Name="i_Save" Margin="0,0,176,25" IsEnabled="False" HorizontalAlignment="Right" Width="27" Height="27" VerticalAlignment="Bottom" RenderSize="27,27"/>
-		<Image x:Name="btn_NightMode" Cursor="Hand"  Margin="0,62,8,0" VerticalAlignment="Top" Height="33" HorizontalAlignment="Right" Width="33" RenderSize="33,33" MouseUp="btn_NightMode_MouseUp">
+		<Image x:Name="btn_NightMode" Cursor="Hand"  Margin="0,27,10,0" VerticalAlignment="Top" Height="33" HorizontalAlignment="Right" Width="33" RenderSize="33,33" MouseUp="btn_NightMode_MouseUp">
 		</Image>
 		<Label x:Name="lbl_LastUpdated" Content="" FontSize="12" Height="30" VerticalAlignment="Bottom" Margin="0,0,0,-6" HorizontalAlignment="Right" Width="157" />
+		<Grid Name="g_Dates" Background="LightGray" Visibility="Hidden" HorizontalAlignment="Left" Height="387" Margin="191,74,0,0" VerticalAlignment="Top" Width="317">
+			<Rectangle Fill="#FFBFC0C9" HorizontalAlignment="Left" Height="21" Margin="0,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="317"/>
+			<Label x:Name="datesTitle" Content="Dates" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Height="31"/>
+			<ListView Name="lv_DateList" HorizontalAlignment="Left" Height="341" Margin="0,20,0,0" VerticalAlignment="Top" Width="317">
+				<ListView.View>
+					<GridView AllowsColumnReorder="False" >
+						<GridViewColumn x:Name="ch_id"		Width="20"	Header="#"		DisplayMemberBinding="{Binding id}"/>
+						<GridViewColumn x:Name="ch_date"	Width="100"	Header="date"	DisplayMemberBinding="{Binding date}"/>
+						<GridViewColumn x:Name="ch_title"	Width="170"	Header="title"	DisplayMemberBinding="{Binding title}"/>
+					</GridView>
+				</ListView.View>
+			</ListView>
+			<Button Name="btn_CancelDate" Content="Cancel" HorizontalAlignment="Left" Margin="0,361,0,0" VerticalAlignment="Top" Width="150" Height="26" Click="Btn_CancelDate_Click"/>
+			<Button Name="btn_JumpToDate" Content="Jump to date" HorizontalAlignment="Left" Margin="167,361,0,0" VerticalAlignment="Top" Width="150" Height="26" Click="Btn_JumpToDate_Click"/>
+		</Grid>
+		<ComboBox Name="cb_SpellcheckLanguage" Margin="0,35,47,0"  VerticalAlignment="Top" HorizontalAlignment="Right" Width="100" RenderTransformOrigin="0.543,0.591" SelectionChanged="Cb_SpellcheckLanguage_SelectionChanged"/>
+		<Button Name="btn_textUndo"			ToolTip="Undo change"		Content="↺"		Margin="0,27,263,0" Padding="0,-13,0,0" VerticalAlignment="Top" Height="32" FontSize="36" HorizontalAlignment="Right" Width="32"/>
+		<Button Name="btn_textRedo"			ToolTip="Redo change"		Content="↻"		Margin="0,27,226,0" Padding="0,-13,0,0" VerticalAlignment="Top" Height="32" FontSize="36" HorizontalAlignment="Right" Width="32"/>
+		<Button Name="btn_textWrap"			ToolTip="Toggle word wrap"	Content="␊"		Margin="0,27,189,0" Padding="0,-14,0,0" VerticalAlignment="Top" Height="32" FontSize="40" HorizontalAlignment="Right" Width="32"/>
+		<Button Name="btn_textSpellCheck"	ToolTip="Toggle spellcheck"	Content="⎁"		Margin="0,27,152,0" Padding="0,-6,0,0" VerticalAlignment="Top" Height="32" FontSize="35" HorizontalAlignment="Right" Width="32"/>
+		<Label	Name="lbl_title_label" Content="Title:" HorizontalAlignment="Left" Margin="257,31,0,0" VerticalAlignment="Top" Width="35"/>
 
 
 	</Grid>
